# RoboCandyWrapper

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish-pypi.yml
docs/: guide_adding_data.md  guide_mixing_datasets.md  guide_transforming_data.md  v2_v3_format_comparison.md
examples/: affordance_labeling.py  example_labels.txt  explore_v2_v3_compatibility.py  inspect_dataset.py  label_episode_outcomes.py  train.py
examples/configs/: README.md  sampler_config.json
robocandywrapper/: __init__.py  constants.py  factory.py  metadata_view.py  plugin.py  utils.py  wrapper.py
robocandywrapper/dataformats/lerobot_21/: __init__.py  convert_v20_to_v21.py  dataset.py  utils.py
robocandywrapper/datasets/: legacy_dataset.py  legacy_utils.py
robocandywrapper/plugins/: __init__.py  affordance.py  control_mode.py  denserewards.py  episode_outcome.py  molmopoint.py  subtask.py
robocandywrapper/samplers/: __init__.py  config.py  factory.py  uniform.py  weighted.py
tests/: test_dataset_weights_integration.py  test_key_rename_stats.py  verify_metadata_view.py  verify_weight_multipliers.py
