[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robocandywrapper"
version = "0.2.12"
description = "Sweet wrappers for extending and remixing LeRobot Datasets"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = {file = "LICENSE"}
authors = [
    {name = "RoboCandyWrapper Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "torch>=2.0.0",
    "lerobot>=0.4,<0.5",
    "pandas>=1.3.0",
    "lerobot-policy-diffusion-motion-primitives",
    "motion-primitives",
    "rewact_tools",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/RoboCandyWrapper"
Repository = "https://github.com/yourusername/RoboCandyWrapper"

[tool.setuptools.packages.find]
where = ["."]
include = ["robocandywrapper*"]
exclude = ["examples*", "tests*"]

[tool.uv]
override-dependencies = [
    "pynput>=0.0.0; sys_platform == 'never'",
    "evdev>=0.0.0; sys_platform == 'never'",
]

[tool.uv.sources]
lerobot-policy-diffusion-motion-primitives = { path = "../../experimental/lerobot_policy_diffusion_motion_primitives", editable = true }
motion-primitives = { path = "../../experimental/motion_primitives", editable = true }
rewact-tools = { path = "../rewACT/rewact_tools", editable = true }

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

